# CLibUtil

./: CMakeLists.txt  LICENSE  ProjectGen.py  README.md  vcpkg.json
cmake/: headerlist.cmake
cmake/ports/clib-util/: portfile.cmake
include/CLIBUtil/: bitmasks.hpp  config.hpp  constexpr_map.hpp  distribution.hpp  editorID.hpp  hash.hpp  hotkeys.hpp  rng.hpp  simpleINI.hpp  singleton.hpp  string.hpp  timer.hpp  utils.hpp
include/CLIBUtil/detail/: SimpleIni.h
